# smart_rover

./: package.xml  setup.cfg  setup.py
launch/: rdk_x3_static_tf.launch.py
lidar_mapping/: package.xml  setup.cfg  setup.py
lidar_mapping/lidar_mapping/: gridmap.py  log.txt  mapping_node_B.py  occupancy_grid_B.py  transform.py  utils.py
lidar_mapping/params/: nav2_params.yaml
path_planning/: package.xml  setup.py
path_planning/docs/: README.md
path_planning/launch/: map_server.launch.py  nav2_bringup.launch.py
path_planning/path_planning/: a_star.py  planning_node copy.py  planning_node.py  spline_publisher.py  theta_star.py
path_planning/resource/: nav2_params.yaml  ros2_custom_map.pgm  ros2_custom_map.yaml
path_planning/rviz/: path_planning.rviz
path_planning/test/: generate_map.py  publish_map.py  splines_global.py  splines_local.py  splines_with_function.py
rover_interfaces/: CMakeLists.txt  package.xml
rover_interfaces/msg/: TwistArray.msg
smart_rover/: circular_trajectory.py  feedback_linearization_node.py  log.txt  motor-test.py  odom_simulator.py  setup.cfg  setup.py
smart_rover/docs/: README.md
smart_rover/launch/: components.launch.py  external_control.launch.py  init_rover.launch.py  rdk_x3_model.launch.py  simulation.launch.py
smart_rover/rviz/: rdk_conf.rviz
smart_rover/smart_rover/: RealSenseHandler.py  angle_controller.py  angle_controller_2.py  feedback_linearization_node.py  kalman_odom_node.py  lidar_simulator.py  log.txt  main_realsense copy.py  main_realsense.py  odom_simulator.py  path_follower.py  switch_controller.py  (+1 more)
(+5 files in other folders)
