<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>path_planning</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="manuel8a31@hotmail.com">manuelo247</maintainer>
  <license>TODO: License declaration</license>

  <!-- Dependencias principales para Nav2 -->
  <depend>nav2_map_server</depend>
  <depend>nav2_util</depend>
  <depend>nav_msgs</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>